# Firmobase

./: .env.example  .gitignore  .npmrc  ARCHITECTURE.md  README.md  docker-compose.yml  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml
apps/web/: .env.local.example  next.config.ts  package.json
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: ai-insights.tsx  billing-actions.tsx  company-financials.tsx  company-grants.tsx  financial-analysis.tsx  financial-chart.tsx  (+6 more)
docs/: ERD.md
services/pipeline/: .dockerignore  .env.example  Dockerfile  pyproject.toml
services/pipeline/app/: celery_app.py  config.py  db.py  main.py
services/pipeline/app/api/: ingest.py
services/pipeline/app/ingest/: __init__.py  ekrs_client.py  ekrs_ingest.py  ekrs_parser.py  financial_ingest.py  financial_pipeline.py  grant_ingest.py
services/pipeline/app/models/: __init__.py  core.py  enums.py  financials.py  grants.py
services/pipeline/app/parse/: __init__.py  financial_parser.py
services/pipeline/app/scrape/: __init__.py  grant_scrapers.py  rdf_scraper.py  storage.py
services/pipeline/app/tasks/: __init__.py
services/pipeline/tests/: test_ekrs_parser.py  test_financial_parser.py
services/pipeline/tests/fixtures/: ekrs_0000006865.json  esprawozdanie_sample.xml
supabase/migrations/: 20260628000001_core_schema.sql  20260629000002_financials.sql  20260629000004_rls.sql  20260629000005_grants.sql  20260630000006_billing.sql  20260630000006_subscriptions.sql  20260630000007_hardening.sql
(+19 files in other folders)
