[project]
name = "firmobase-pipeline"
version = "0.0.1"
description = "Firmobase ingestion, scraping, parsing and analytics pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "httpx>=0.28",
    "tenacity>=9.0",
    "structlog>=24.4",
]

[project.optional-dependencies]
scraping = [
    "playwright>=1.49",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
]
analytics = [
    "pandas>=2.2",
    "polars>=1.17",
]
ai = [
    "anthropic>=0.40",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
